[gd_scene load_steps=15 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/counters/StandardCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/h2_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/info_elements/ArsCard.gd" type="Script" id=4]
[ext_resource path="res://resources/h1_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/sprites/backgrounds/9patch_scroll1_med.png" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://resources/fonts/Nefthypos-Regular-Complete.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
outline_color = Color( 0.137255, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 21
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_color = Color( 0.137255, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://resources/fonts/Nefthypos-Regular-Complete.ttf"

[sub_resource type="DynamicFont" id=8]
size = 20
use_filter = true
font_data = SubResource( 7 )

[node name="ArsCard" type="NinePatchRect"]
margin_right = 350.0
margin_bottom = 300.0
rect_min_size = Vector2( 350, 450 )
theme = ExtResource( 1 )
texture = ExtResource( 6 )
patch_margin_left = 28
patch_margin_top = 40
patch_margin_right = 26
patch_margin_bottom = 31
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 320.0
margin_bottom = 420.0

[node name="ArsName" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 290.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Olvido"
align = 1

[node name="ArsGroup" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 290.0
margin_bottom = 59.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArsGroupName" type="Label" parent="CenterContainer/VBoxContainer/ArsGroup"]
margin_left = 32.0
margin_right = 138.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Ocultaci칩n"

[node name="Level" parent="CenterContainer/VBoxContainer/ArsGroup" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 142.0
margin_right = 258.0
margin_bottom = 26.0
initial_level = 5

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 290.0
margin_bottom = 67.0

[node name="Challenge" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 290.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 2 )
text = " Sci+Quod D8, Opus+Ego D10"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 290.0
margin_bottom = 158.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 29.0
margin_right = 261.0
margin_bottom = 65.0
custom_constants/hseparation = 10
columns = 4

[node name="TargetL" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_right = 69.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.25098, 1 )
text = "Objetivo:"
align = 2

[node name="Target" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 79.0
margin_top = 1.0
margin_right = 103.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 4 )
text = "Yo"

[node name="RangeL" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 113.0
margin_right = 175.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.25098, 1 )
text = "Alcance:"
align = 2

[node name="Range" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 185.0
margin_top = 1.0
margin_right = 232.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 4 )
text = "Planeta"

[node name="CastTimeL" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 23.0
margin_right = 69.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.25098, 1 )
text = "Tiempo:"
align = 2

[node name="CastTime" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 79.0
margin_top = 24.0
margin_right = 103.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "1dia"

[node name="CostL" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 113.0
margin_top = 23.0
margin_right = 175.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.25098, 1 )
text = "Coste"
align = 2

[node name="Cost" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 185.0
margin_top = 24.0
margin_right = 232.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "-Co"

[node name="DurationL" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 46.0
margin_right = 69.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.25098, 1 )
text = "Duraci칩n:"
align = 2

[node name="Duration" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 79.0
margin_top = 47.0
margin_right = 103.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 4 )
text = "Inst"

[node name="MaintL" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 113.0
margin_top = 46.0
margin_right = 175.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.25098, 1 )
text = "Manten.:"
align = 2

[node name="Maint" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 185.0
margin_top = 47.0
margin_right = 232.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 4 )
text = "No"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 290.0
margin_bottom = 166.0

[node name="Description" type="TextEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 290.0
margin_bottom = 390.0
rect_min_size = Vector2( 290, 220 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_vertical = 3
custom_styles/read_only = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 8 )
text = "La sombra es capaz de eliminar cualquier rastro de su existencia en el 치mbito que elija: recuerdos, fotos, videos, referencias escritas, etc. La dificultad de la prueba de Sci+Quod aumentar치 a 9 cuando afecte a todo el plano y a 10 cuando afecte al multiverso"
readonly = true
wrap_enabled = true
